--- a/gaselcancer.cfg
+++ b/gaselcancer.cfg
@@ -1,17 +1,37 @@
-# GENE VARIABLES
-NUM_CARCINOGEN 20
-CARCINOGEN_GENES [3 4  7 9 12 15 19 22 28 36 41 49 53 57 64 65 70 73 81 97]
+// GENE VARIABLES
+GENE_VARS = 
+{
+  MAX_GENE_NUMBER = 100; //Maximum number of genes available. It's the M defined in the function above.
+  CARCINOGEN_GENES = [3, 4, 7, 9, 12, 15, 19, 22, 28, 36, 41, 49, 53, 57, 64, 65, 70, 73, 81, 97];
+}
 
-# CHROMOSOME VARIABLES
-# Fitness function f(x) = A(x)*w1 + w2*(M - R(x))/M 
-MAX_GENE_NUMBER 100 //Maximum number of genes available. It's the M defined in the function above.
-NUM_FEATURES 10 //Number of features per chromosome
-WEIGHT_1 0.65 //Weights defined in the function above
-WEIGHT_2 0.35
+// CHROMOSOME VARIABLES
+// Fitness function f(x) = A(x)*w1 + w2*(M - R(x))/M 
+CHROMOSOME_VARS =
+{
+  NUM_FEATURES = 10; //Number of features per chromosome
+  WEIGHT_1 = 0.65; //Weights defined in the function above
+  WEIGHT_2 = 0.35;
+}
 
-# GENETIC ALGORITHM VARIABLES
-POPULATION_SIZE 10
-MUTATION_PROBABILITY 15
-MAX_GENERATIONS 100
-ELITISM 15
-CROSSOVERs_PER_GEN 10
+// GENETIC ALGORITHM VARIABLES
+GA_VARS =
+{
+  MUTATION_PROBABILITY = 15; //Mutation probability in percentage
+  MAX_GENERATIONS = 100;
+  ELITISM = 15; //Percentage of the population that will be part of the elite
+  CROSSOVERS_PER_GEN = 10;
+  POPULATION =
+  (
+    [0, 1, 2, 3, 4, 5, 6, 7, 8, 9],
+    [10, 11, 12, 13, 14, 15, 16, 17, 18, 19],
+    [20, 21, 22, 23, 24, 25, 26, 27, 28, 29],
+    [30, 31, 32, 33, 34, 35, 36, 37, 38, 39],
+    [40, 41, 42, 43, 44, 45, 46, 47, 48, 49],
+    [50, 51, 52, 53, 54, 55, 56, 57, 58, 59],
+    [60, 61, 62, 63, 64, 65, 66, 67, 68, 69],
+    [70, 71, 72, 73, 74, 75, 76, 77, 78, 79],
+    [80, 81, 82, 83, 84, 85, 86, 87, 88, 89],
+    [90, 91, 92, 93, 94, 95, 96, 97, 98, 99]
+  )
+}
